Add setting Dialog with port number value in it.
Based on example from: http://viralpatel.net/blogs/android-preferences-activity-example/

Signed-off-by: Tzachi Dar <tzachi.dar@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,8 @@
     <string name="title_activity_usb_attach_workaround">UsbAttachWorkaroundActivity</string>
     <string name="hello_world">Hello world!</string>
 
+    <string name="setting_title">Comunication setting</string>
+    <string name="port_number">Port Number</string>
+    <string name="port_number_summary">Set port for tcp connection to this device</string>    
+
 </resources>
